--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,16 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
-
     dependencies {
-        classpath 'com.android.tools.build:gradle:8.5.1'
+        classpath "com.android.tools.build:gradle:8.2.2"
     }
 }
+
 allprojects {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
 }
