--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.library'
+apply plugin: 'maven-publish'
 
 android {
     compileSdkVersion 35
@@ -6,6 +7,18 @@ android {
     defaultConfig {
         minSdkVersion 16
         targetSdkVersion 35
+    }
+
+    // Se quiser facilitar o uso via JitPack
+    publishing {
+        publications {
+            release(MavenPublication) {
+                from components.release
+                groupId = 'com.github.soareseneves'
+                artifactId = 'VolleyPlus'
+                version = '0.1.4'
+            }
+        }
     }
 }
 
